# Jiechen_Li_Individual_2

./: Makefile  README.md  query_log.md
.github/workflows/: cicd.yml
rust_sqlite_project/: Cargo.toml  query_log.md  spotify_2023_1_new.db  spotify_2023_1_new_test.db
rust_sqlite_project/src/: lib.rs  main.rs
rust_sqlite_project/tests/: tests.rs
