[package]
name = "rust_sqlite_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.29.0"
reqwest = { version = "^0.11", features = ["blocking"] }
csv = "^1.0"
assert_cmd = "^2.0"
predicates = "0.9"